# sol-deadswitch

./: Anchor.toml  README.md  package.json
programs/dead_switch/: Cargo.toml
programs/dead_switch/src/: lib.rs
tests/: dead_switch.ts
