[package]
name = "dead_switch"
version = "0.1.0"
description = "Solana dead man's switch built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dead_switch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
